--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
-    "slugify": "^1.6.2"
+    "slugify": "^1.6.2",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
