--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.12",
+    "mongoose": "5.5.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.1",
     "slugify": "^1.6.2",
