--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "5.5.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.1",
+    "pug": "^3.0.2",
     "slugify": "^1.6.2",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
