--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "5.5.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "nodemailer": "^6.7.1",
     "pug": "^3.0.2",
     "slugify": "^1.6.2",
