--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-rate-limit": "^5.5.1",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
+    "html-to-text": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "5.5.2",
     "morgan": "^1.10.0",
