--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "alert": "^5.0.10",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
